# anybody_speaker

./: .gitignore  README.md  find.py  pyproject.toml  requirements.txt
bert/: bert_models.json
src/: config.py  constants.py  custom_logging.py  initialize.py  input_recording.py  llm.py  main.py  onnx_check.py  requirements.txt  speech2text.py  test_sound_device.py  tmp.txt  tts_model.py  voice.py
src/bert/: bert_models.json
src/models/: attentions.py  commons.py  export_onnx.py  hyper_parameters.py  infer.py  models.py  models_jp_extra.py  modules.py  transforms.py
src/models/utils/: __init__.py  checkpoints.py  safetensors.py
src/nlp/: __init__.py  bert_models.py
src/nlp/japanese/: bert_feature.py  g2p.py  g2p_utils.py  normalizer.py
src/nlp/japanese/pyopenjtalk_worker/: __init__.py  worker_client.py  worker_common.py  worker_server.py
src/nlp/japanese/user_dict/: __init__.py  part_of_speech_data.py
src/utils/: subprocess.py
